register.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registe
  template:
    metadata:
      labels:
        app: registe
    spec:
      containers:
        - name: registe
          image: registe:latest  
          imagePullPolicy: Never
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: registe
spec:
  selector:
    app: registe
  ports:
    - protocol: TCP
      port: 5000   # Service Port
      targetPort: 5000  # Container Port
      nodePort: 30020   # Exposed Port on Node
  type: LoadBalancer
