ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: register
  namespace: default  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - host: regi.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registe  
            port:
              number: 5000
